[#DCMEE-566] Move native components of jai-imageio to bin/native