@@ -1,7 +1,12 @@
 @echo off
 setlocal
 set DIRNAME=%~dp0
-set RUNJAR=%DIRNAME%\run.jar
+set PROGNAME=%~nx0%
+pushd %DIRNAME%..
+set JBOSS_HOME=%CD%
+popd
+
+set RUNJAR=%JBOSS_HOME%\bin\run.jar
 if exist "%RUNJAR%" goto found_runjar
 echo Could not locate %RUNJAR%. Please check that you are in the
 echo bin directory when running this script.
@@ -39,6 +44,9 @@ echo Could not locate %TOOLS_JAR%. Unexpected results may occur.
 echo Make sure that JAVA_HOME points to a JDK and not a JRE.
 
 :install
+rem Setup JBoss specific properties
+set JAVA_OPTS=%JAVA_OPTS% -Dprogram.name=%PROGNAME%
+
 rem JVM memory allocation pool parameters. Modify as appropriate.
 set JAVA_OPTS=%JAVA_OPTS% -Xms128m -Xmx512m
 
@@ -48,7 +56,10 @@ set JAVA_OPTS=%JAVA_OPTS% -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.
 rem Set app.name and app.pid used in emitted audit log messages
 set JAVA_OPTS=%JAVA_OPTS% -Dapp.name=dcm4chee-arr -Dapp.pid=%RANDOM%
 
-JavaService.exe -install dcm4chee-arr "%VM%" %JAVA_OPTS% "-Djava.class.path=%TOOLS_JAR%;%RUNJAR%"  -start org.jboss.Main -stop org.jboss.Main -method systemExit  -out "%DIRNAME%\out.txt" -err "%DIRNAME%\err.txt"
+rem Setup the java endorsed dirs
+set JAVA_OPTS=%JAVA_OPTS% -Djava.endorsed.dirs=%JBOSS_HOME%\lib\endorsed
+
+JavaService.exe -install dcm4chee-arr "%VM%" %JAVA_OPTS% "-Djava.class.path=%TOOLS_JAR%;%RUNJAR%"  -start org.jboss.Main -stop org.jboss.Main -method systemExit -out "%JBOSS_HOME%\bin\out.txt" -err "%JBOSS_HOME%\bin\err.txt" -current "%JBOSS_HOME%\bin"
 goto eof
 
 :uninstall
